--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,11 @@
         "titleBar.inactiveBackground": "#ffa50099",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "Orange"
+    "peacock.color": "Orange",
+    "cSpell.words": [
+        "Buttonselected",
+        "jenn",
+        "krang",
+        "mypage"
+    ]
 }
